--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react": "^16.11.0",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.11.0",
-    "react-scripts": "3.1.2"
+    "react-scripts": "3.1.2",
+    "serve": "^11.2.0"
   },
   "scripts": {
     "predeploy": "npm run build",
