--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/core": "^10.0.7",
     "@emotion/styled": "^10.0.7",
     "bootstrap": "^4.3.1",
+    "emailjs-com": "^2.4.1",
     "emotion-theming": "^10.0.7",
     "gh-pages": "^2.1.1",
     "import-all.macro": "^2.0.3",
@@ -19,6 +20,7 @@
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.2",
+    "react-toast-notifications": "^2.4.0",
     "serve": "^11.2.0",
     "styled-components": "^4.4.1"
   },
