--- a/package.json
+++ b/package.json
@@ -1,32 +1,35 @@
 {
   "name": "react-app",
+  "description": " This serves my personal blog purpose, to show to world my works",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@emotion/core": "^10.0.7",
     "@emotion/styled": "^10.0.7",
-    "bootstrap": "^4.3.1",
     "emailjs-com": "^2.4.1",
     "emotion-theming": "^10.0.7",
     "gh-pages": "^2.1.1",
+    "i18next": "^19.3.2",
+    "i18next-xhr-backend": "^3.2.2",
     "import-all.macro": "^2.0.3",
     "mdx.macro": "^0.2.9",
-    "node-sass": "^4.13.0",
+    "node-sass": "^4.13.1",
     "pm2": "^4.1.2",
     "radium": "^0.26.0",
     "react": "^16.11.0",
     "react-animations": "^1.0.0",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.11.0",
+    "react-i18next": "^11.3.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.1.2",
+    "react-scripts": "^3.4.0",
     "react-toast-notifications": "^2.4.0",
     "serve": "^11.2.0",
     "styled-components": "^4.4.1"
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "git add . && git commit -m 'added all files to build to site' && git push && gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -47,5 +50,8 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://alexandreabreu46.site/"
+  "homepage": "https://alexandreabreu46.site/",
+  "devDependencies": {
+    "postcss-loader": "^3.0.0"
+  }
 }
