--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "i18next-xhr-backend": "^3.2.2",
     "import-all.macro": "^2.0.3",
     "mdx.macro": "^0.2.9",
+    "moment": "^2.24.0",
     "node-sass": "^4.13.1",
     "pm2": "^4.1.2",
     "radium": "^0.26.0",
@@ -23,10 +24,13 @@
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.11.0",
     "react-i18next": "^11.3.3",
+    "react-markdown": "^4.3.1",
+    "react-moment": "^0.9.7",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.2.0",
     "react-toast-notifications": "^2.4.0",
     "serve": "^11.2.0",
+    "strapi-sdk-javascript": "^0.3.3",
     "styled-components": "^4.4.1"
   },
   "scripts": {
