--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-animations": "^1.0.0",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.11.0",
+    "react-ga": "^2.7.0",
     "react-i18next": "^11.3.3",
     "react-markdown": "^4.3.1",
     "react-moment": "^0.9.7",
