--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "moment": "^2.24.0",
     "node-sass": "^4.13.1",
     "pm2": "^4.1.2",
+    "popper": "^1.0.1",
+    "popper.js": "^1.14.3",
     "radium": "^0.26.0",
     "react": "^16.11.0",
     "react-animations": "^1.0.0",
