--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@emotion/core": "^10.0.7",
     "@emotion/styled": "^10.0.7",
+    "@react-pdf/renderer": "^2.0.15",
     "bootstrap": "^4.4.1",
     "emailjs-com": "^2.4.1",
     "emotion-theming": "^10.0.7",
@@ -33,6 +34,7 @@
     "react-lottie": "^1.2.3",
     "react-markdown": "^4.3.1",
     "react-moment": "^0.9.7",
+    "react-pdf": "^5.3.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.2.0",
     "react-toast-notifications": "^2.4.0",
@@ -44,8 +46,8 @@
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-scripts --max_old_space_size=4096 start",
+    "build": "react-scripts --max_old_space_size=4096 build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
