--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "i18next-browser-languagedetector": "^4.0.2",
     "i18next-xhr-backend": "^3.2.2",
     "import-all.macro": "^2.0.3",
+    "jquery": "^3.6.0",
     "mdx.macro": "^0.2.9",
     "moment": "^2.24.0",
     "node-sass": "^4.13.1",
     "pm2": "^4.1.2",
     "popper": "^1.0.1",
-    "popper.js": "^1.14.3",
+    "popper.js": "^1.16.1",
     "radium": "^0.26.0",
     "react": "^16.11.0",
     "react-animations": "^1.0.0",
