--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://alexandreabreu46.site",
+  "homepage": "https://alexandreabreu.site",
   "devDependencies": {
     "postcss-loader": "^3.0.0"
   }
