--- a/package.json
+++ b/package.json
@@ -4,45 +4,49 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/core": "^10.0.7",
-    "@emotion/styled": "^10.0.7",
-    "@react-pdf/renderer": "^2.0.15",
-    "bootstrap": "^4.4.1",
+    "@emotion/core": "^11.0.0",
+    "@emotion/styled": "^11.10.0",
+    "@react-pdf/renderer": "^2.3.0",
+    "bootstrap": "^5.2.0",
+    "dotenv": "^16.0.1",
+    "dotenv-expand": "^8.0.3",
     "emailjs-com": "^2.4.1",
-    "emotion-theming": "^10.0.7",
-    "gh-pages": "^2.1.1",
-    "history": "^4.10.1",
-    "i18next": "^19.3.2",
-    "i18next-browser-languagedetector": "^4.0.2",
+    "emotion-theming": "^11.0.0",
+    "gh-pages": "^4.0.0",
+    "history": "^5.3.0",
+    "i18next": "^21.9.0",
+    "i18next-browser-languagedetector": "^6.1.4",
+    "i18next-http-backend": "^1.4.1",
     "i18next-xhr-backend": "^3.2.2",
-    "import-all.macro": "^2.0.3",
+    "import-all.macro": "^3.1.0",
     "jquery": "^3.6.0",
     "mdx.macro": "^0.2.9",
-    "moment": "^2.24.0",
-    "node-sass": "^4.13.1",
-    "pm2": "^4.1.2",
+    "moment": "^2.29.4",
+    "node-sass": "^7.0.1",
+    "pm2": "^5.2.0",
     "popper": "^1.0.1",
     "popper.js": "^1.16.1",
-    "radium": "^0.26.0",
-    "react": "^16.11.0",
+    "radium": "^0.26.2",
+    "react": "^18.2.0",
     "react-animations": "^1.0.0",
-    "react-bootstrap": "^1.0.0-beta.14",
-    "react-dom": "^16.11.0",
-    "react-fade-in": "^1.1.0",
-    "react-ga": "^2.7.0",
-    "react-i18next": "^11.3.3",
+    "react-bootstrap": "^2.5.0",
+    "react-dom": "^18.2.0",
+    "react-fade-in": "^2.0.1",
+    "react-ga": "^3.3.1",
+    "react-google-recaptcha-v3": "^1.10.0",
+    "react-i18next": "^11.18.3",
     "react-loading": "^2.0.3",
     "react-lottie": "^1.2.3",
-    "react-markdown": "^4.3.1",
-    "react-moment": "^0.9.7",
-    "react-pdf": "^5.3.0",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.2.0",
-    "react-toast-notifications": "^2.4.0",
-    "react-vertical-timeline-component": "^3.0.2",
-    "serve": "^11.2.0",
+    "react-markdown": "^8.0.3",
+    "react-moment": "^1.1.2",
+    "react-pdf": "^5.7.2",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "^5.0.1",
+    "react-toast-notifications": "^2.5.1",
+    "react-vertical-timeline-component": "^3.5.2",
+    "serve": "^14.0.1",
     "strapi-sdk-javascript": "^0.3.3",
-    "styled-components": "^4.4.1"
+    "styled-components": "^5.3.5"
   },
   "scripts": {
     "predeploy": "npm run build",
@@ -50,7 +54,9 @@
     "start": "react-scripts --max_old_space_size=4096 start",
     "build": "react-scripts --max_old_space_size=4096 build",
     "test": "react-scripts test",
-    "format": "npx prettier --write .",
+    "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
+    "lint": "eslint src/**/*.js src/**/*.jsx",
+    "lint:fix": "npm run lint -- --fix",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -70,7 +76,18 @@
   },
   "homepage": "https://alexandreabreu.site",
   "devDependencies": {
-    "postcss-loader": "^3.0.0",
-    "prettier": "2.7.1"
+    "@babel/core": "^7.18.10",
+    "@babel/eslint-parser": "^7.18.9",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^8.21.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "postcss-loader": "^7.0.1",
+    "prettier": "^2.7.1"
   }
 }
