--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://alexandreabreu.site",
+  "homepage": "https://alexandreabreu.online",
   "devDependencies": {
     "@babel/core": "^7.18.10",
     "@babel/eslint-parser": "^7.18.9",
